--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Thomas Pequegnot"
   avatar           : "profile.png"
-  bio              : "Student at Easchester High School, NY"
+  bio              : "Senior studying Computer and Data Science at NYU"
   location         : "New York"
   employer         :
   pubmed           :
