--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,35 @@
 # main links links
 main:
-#  - title: "Publications"
-#    url: /publications/
+  - title: "About Me"
+    url: /
 
-#  - title: "Talks"
-#    url: /talks/    
-
-#  - title: "Teaching"
-#    url: /teaching/    
-    
-#  - title: "Portfolio"
-#    url: /portfolio/
-        
-#  - title: "Blog Posts"
-#    url: /year-archive/
-    
   - title: "Resume"
     url: /cv/
-    
+
+  - title: "Projects"
+    url: /portfolio/
+
+  - title: "Skills and Coursework"
+    url: /cv/
+
+  - title: "Contact"
+    url: /contact/
+
+# Other optional links (kept for reference)
+#  - title: "Publications"
+#    url: /publications/
+#
+#  - title: "Talks"
+#    url: /talks/
+#
+#  - title: "Teaching"
+#    url: /teaching/
+#
+#  - title: "Portfolio"
+#    url: /portfolio/
+#
+#  - title: "Blog Posts"
+#    url: /year-archive/
+#
 #  - title: "Guide"
 #    url: /markdown/
